<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WorkspaceClass</class>
 <widget class="QMainWindow" name="WorkspaceClass">
  <property name="windowModality">
   <enum>Qt::ApplicationModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1015</width>
    <height>671</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Workspace</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../Workspace.qrc">
    <normaloff>:/Workspace/AppIcon.ico</normaloff>:/Workspace/AppIcon.ico</iconset>
  </property>
  <property name="documentMode">
   <bool>false</bool>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
    <property name="margin">
     <number>0</number>
    </property>
    <item>
     <widget class="QMdiArea" name="sceneArea"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1015</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionNewScene"/>
    <addaction name="actionImportObject"/>
    <addaction name="actionExportObject"/>
    <addaction name="separator"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuView">
    <property name="title">
     <string>View</string>
    </property>
    <addaction name="actionCameraProjection"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuView"/>
   <addaction name="menuHelp"/>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <property name="windowTitle">
    <string>Main Toolbar</string>
   </property>
   <property name="toolButtonStyle">
    <enum>Qt::ToolButtonTextBesideIcon</enum>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionNewScene"/>
   <addaction name="separator"/>
   <addaction name="actionMeshBrowser"/>
   <addaction name="separator"/>
   <addaction name="actionImportObject"/>
  </widget>
  <widget class="QDockWidget" name="leftDock">
   <property name="minimumSize">
    <size>
     <width>120</width>
     <height>40</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Tools</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>1</number>
   </attribute>
   <widget class="QWidget" name="leftDockWidget">
    <layout class="QVBoxLayout" name="verticalLayout_3"/>
   </widget>
  </widget>
  <widget class="QDockWidget" name="rightDock">
   <property name="windowTitle">
    <string>Options</string>
   </property>
   <attribute name="dockWidgetArea">
    <number>2</number>
   </attribute>
   <widget class="QWidget" name="rightDockWidget">
    <layout class="QVBoxLayout" name="verticalLayout_2"/>
   </widget>
  </widget>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
  <action name="actionNewScene">
   <property name="icon">
    <iconset resource="../Workspace.qrc">
     <normaloff>:/Workspace/Resources/icons/newScene.png</normaloff>:/Workspace/Resources/icons/newScene.png</iconset>
   </property>
   <property name="text">
    <string>New scene</string>
   </property>
  </action>
  <action name="actionImportObject">
   <property name="icon">
    <iconset resource="../Workspace.qrc">
     <normaloff>:/Workspace/Resources/icons/insertObject.png</normaloff>:/Workspace/Resources/icons/insertObject.png</iconset>
   </property>
   <property name="text">
    <string>Import object</string>
   </property>
   <property name="toolTip">
    <string>Import object</string>
   </property>
  </action>
  <action name="actionExportObject">
   <property name="icon">
    <iconset resource="../Workspace.qrc">
     <normaloff>:/Workspace/Resources/icons/export.png</normaloff>:/Workspace/Resources/icons/export.png</iconset>
   </property>
   <property name="text">
    <string>Export object</string>
   </property>
  </action>
  <action name="actionCameraProjection">
   <property name="text">
    <string>Change camera projection</string>
   </property>
  </action>
  <action name="actionMeshBrowser">
   <property name="icon">
    <iconset resource="../Workspace.qrc">
     <normaloff>:/Workspace/Resources/icons/browse.ico</normaloff>:/Workspace/Resources/icons/browse.ico</iconset>
   </property>
   <property name="text">
    <string>Mesh Browser</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="../Workspace.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>actionExit</sender>
   <signal>triggered()</signal>
   <receiver>WorkspaceClass</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>639</x>
     <y>359</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
